kfreebsd-11 (11.0~svn256281-2) UNRELEASED; urgency=low

  [ Robert Millan ]
  * Remove (disabled) patch 006_mips_i8259_alloc.diff. Problem has been
    fixed in upstream already.

  [ Guillem Jover ]
  * Remove myself from Uploaders.

 -- Robert Millan <rmh@debian.org>  Sat, 12 Oct 2013 01:36:08 +0200

kfreebsd-11 (11.0~svn256281-1) experimental; urgency=low

  * New upstream snapshot.
    - Rename to kfreebsd-11.
    - Refresh all patches.

  [ Robert Millan ]
  * Only build with Clang on architectures where it is the default in
    upstream.
  * Remove -686-smp transitional packages (not needed for kfreebsd-11).
  * Set __FreeBSD__=1000 for kernel CFLAGS.

 -- Robert Millan <rmh@debian.org>  Thu, 10 Oct 2013 20:02:00 +0200

kfreebsd-10 (10.0~svn255915-1) experimental; urgency=low

  * New upstream snapshot.
    - Includes Xen HVM support.

  [ Robert Millan ]
  * Remove one gratuitous round of src copying.
  * Disable -Werror only for non-Clang compilers.
  * Properly set CLANG_IS_CC knob according to selected compiler.
  * Re-enable -O2.
  * Build kfreebsd-headers-\* only on kfreebsd-@arch@.
  * userland.diff: Import selection of header fixes needed by userland.

  [ Steven Chamberlain ]
  * Improve repeatability of builds:
    - Omit gzip timestamp from kernel image.
    - Use timestamp from debian/changelog for uname --kernel-release,
      instead of the exact time of the build.

 -- Robert Millan <rmh@debian.org>  Sun, 29 Sep 2013 02:16:58 +0200

kfreebsd-10 (10.0~svn255412-1) experimental; urgency=low

  * New upstream snapshot.
    - 920_linux_cflags.diff: Set __FreeBSD__=10 in order to fix <stddef.h>
      buildability.
    - Switch to clang (at least until/unless GCC <wmmintrin.h> becomes
      buildable).

  [ Robert Millan ]
  * Stop overriding linker_path, this is done in userland already.
  * Make kfreebsd-headers-@version@-@abiname@ kfreebsd-specific.

 -- Robert Millan <rmh@debian.org>  Mon, 09 Sep 2013 14:18:49 +0200
