@@ -167,8 +167,8 @@ build-flavor-%-stamp: src-flavor-%-stamp
 	# Change ident to the kernel version
 	sed -i -e 's/^i=.*/i="Debian $* ($(full_version))"/g' $(FLAVOR_DIR)-$*/sys/conf/newvers.sh
 
-	# Set /lib/modules/${RELEASE} as module dir
-	sed -i -e 's,^KODIR?=.*,KODIR="/lib/modules/$(version)-$(abiname)-$*",g' $(FLAVOR_DIR)-$*/sys/conf/kern.pre.mk
+	# Override module dir
+	sed -i -e 's,^KODIR?=.*,KODIR="/boot/modules/$(version)-$(abiname)-$*",g' $(FLAVOR_DIR)-$*/sys/conf/kern.pre.mk
 
 	# Always set explicit link target to match with ld's implicit target (needed
 	# to build on non-kFreeBSD)
@@ -221,7 +221,7 @@ install-flavor-%-stamp: install-common-stamp build-flavor-%-stamp
 	dh_testroot
 	dh_clean -k -pkfreebsd-image-$(version)-$(abiname)-$*
 
-	mkdir -p $(IMAGE_PACKAGE)-$*/{boot,lib/modules/$(version)-$(abiname)-$*}
+	mkdir -p $(IMAGE_PACKAGE)-$*/boot/modules/$(version)-$(abiname)-$*
 
 	# make the install target happy
 	install -o root -g root -m 644 \
@@ -242,12 +242,12 @@ install-flavor-%-stamp: install-common-stamp build-flavor-%-stamp
 
 	# now install the kernel
 	$(MAKE) CC=$(cc_cmd) -C $(FLAVOR_DIR)-$*/sys/$(kfreebsd_cpu)/compile/$(configfile) DESTDIR=$(IMAGE_PACKAGE)-$* install
-	mv $(IMAGE_PACKAGE)-$*/lib/modules/$(version)-$(abiname)-$*/kernel $(IMAGE_PACKAGE)-$*/boot/kfreebsd-$(version)-$(abiname)-$*
+	mv $(IMAGE_PACKAGE)-$*/boot/modules/$(version)-$(abiname)-$*/kernel $(IMAGE_PACKAGE)-$*/boot/kfreebsd-$(version)-$(abiname)-$*
 	chmod 644 $(IMAGE_PACKAGE)-$*/boot/kfreebsd-$(version)-$(abiname)-$*
 	gzip -9 -n $(IMAGE_PACKAGE)-$*/boot/kfreebsd-$(version)-$(abiname)-$*
 
 	# fix broken perms in module dir
-	-chmod 644 $(IMAGE_PACKAGE)-$*/lib/modules/$(version)-$(abiname)-$*/*
+	-chmod 644 $(IMAGE_PACKAGE)-$*/boot/modules/$(version)-$(abiname)-$*/*
 
 	# remove loader.conf (part of kfreebsd-loader)
 	rm -f $(IMAGE_PACKAGE)-$*/boot/loader.conf
@@ -255,6 +255,13 @@ install-flavor-%-stamp: install-common-stamp build-flavor-%-stamp
 
 	# remove device.hints (built into kernel)
 	rm -f $(IMAGE_PACKAGE)-$*/boot/device.hints
+
+	# compatibility symlink
+	mkdir -p $(IMAGE_PACKAGE)-$*/lib/modules
+	ln -s \
+		../../boot/modules/$(version)-$(abiname)-$* \
+		$(IMAGE_PACKAGE)-$*/lib/modules/$(version)-$(abiname)-$*
+
 
 	# README file
 	mkdir -p $(IMAGE_PACKAGE)-$*/usr/share/doc/kfreebsd-image-$(version)-$(abiname)-$*
@@ -342,12 +349,12 @@ binary-arch: build-arch install-arch
 	dh_installdocs -s
 	dh_installchangelogs -s
 	dh_link -s
-	dh_strip -s -X/boot -X/lib/modules
+	dh_strip -s -X/boot
 	dh_compress -s
 	dh_fixperms -s
 	dh_makeshlibs -s
 	dh_installdeb -s
-	dh_shlibdeps -s -X/boot -X/lib/modules
+	dh_shlibdeps -s -X/boot
 	dh_gencontrol -s
 	dh_md5sums -s
 	dh_builddeb -s -- -Zxz
