@@ -3,6 +3,8 @@ kfreebsd-11 (11.0~svn256281-2) UNRELEASED; urgency=low
   [ Robert Millan ]
   * Remove (disabled) patch 006_mips_i8259_alloc.diff. Problem has been
     fixed in upstream already.
+  * Move modules to /boot/modules, as discussed in
+    https://lists.debian.org/debian-bsd/2013/09/msg00003.html
 
   [ Guillem Jover ]
   * Remove myself from Uploaders.
